infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraud-detection-service
spec:
  type: NodePort
  selector:
    app: fraud-detection-api
  ports:
    - name: nodeport
      protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080
